learnning/vine-compare/ocaml-4.01.0/ocamldoc/odoc_text_parser.output
   0  $accept : %entry% $end

   1  main : text EOF
   2       | EOF

   3  text : text_element_list

   4  text_element_list : text_element
   5                    | text_element text_element_list

   6  located_element_list : located_element
   7                       | located_element located_element_list

   8  located_element : text_element

   9  ele_ref_kind : ELE_REF
  10               | VAL_REF
  11               | TYP_REF
  12               | EXC_REF
  13               | MOD_REF
  14               | MODT_REF
  15               | CLA_REF
  16               | CLT_REF
  17               | ATT_REF
  18               | MET_REF
  19               | SEC_REF
  20               | RECF_REF
  21               | CONST_REF

  22  text_element : Title text END
  23               | BOLD text END
  24               | ITALIC text END
  25               | CUSTOM text END
  26               | EMP text END
  27               | SUPERSCRIPT text END
  28               | SUBSCRIPT text END
  29               | CENTER text END
  30               | LEFT text END
  31               | RIGHT text END
  32               | LIST list END
  33               | ENUM list END
  34               | CODE string END_CODE
  35               | CODE_PRE string END_CODE_PRE
  36               | ele_ref_kind string END
  37               | LBRACE ele_ref_kind string END text END
  38               | MOD_LIST_REF string END
  39               | INDEX_LIST
  40               | VERB string END_VERB
  41               | LATEX string END_TARGET
  42               | Target string END_TARGET
  43               | LINK string END text END
  44               | BLANK_LINE
  45               | BEGIN_SHORTCUT_LIST_ITEM shortcut_list END_SHORTCUT_LIST
  46               | BEGIN_SHORTCUT_LIST_ITEM shortcut_list EOF
  47               | BEGIN_SHORTCUT_ENUM_ITEM shortcut_enum END_SHORTCUT_LIST
  48               | BEGIN_SHORTCUT_ENUM_ITEM shortcut_enum EOF
  49               | string

  50  list : string
  51       | string list
  52       | list string
  53       | item
  54       | item list

  55  item : ITEM text END

  56  shortcut_list : text shortcut_list2
  57                | text

  58  shortcut_list2 : SHORTCUT_LIST_ITEM shortcut_list

  59  shortcut_enum : text shortcut_enum2
  60                | text

  61  shortcut_enum2 : SHORTCUT_ENUM_ITEM shortcut_enum

  62  string : Char
  63         | Char string

  64  %entry% : '\001' main
  65          | '\002' located_element_list

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . main  (64)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	EOF  shift 41
	Char  shift 42
	.  error

	main  goto 43
	text  goto 44
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 2
	%entry% : '\002' . located_element_list  (65)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	located_element_list  goto 49
	text_element  goto 50
	located_element  goto 51
	ele_ref_kind  goto 47
	string  goto 48


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	text_element : Title . text END  (22)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 52
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 5
	text_element : BOLD . text END  (23)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 53
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 6
	text_element : EMP . text END  (26)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 54
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 7
	text_element : CENTER . text END  (29)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 55
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 8
	text_element : LEFT . text END  (30)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 56
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 9
	text_element : RIGHT . text END  (31)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 57
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 10
	text_element : ITALIC . text END  (24)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 58
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 11
	text_element : CUSTOM . text END  (25)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 59
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 12
	text_element : LIST . list END  (32)

	ITEM  shift 60
	Char  shift 42
	.  error

	list  goto 61
	string  goto 62
	item  goto 63


state 13
	text_element : ENUM . list END  (33)

	ITEM  shift 60
	Char  shift 42
	.  error

	list  goto 64
	string  goto 62
	item  goto 63


state 14
	text_element : LINK . string END text END  (43)

	Char  shift 42
	.  error

	string  goto 65


state 15
	text_element : CODE . string END_CODE  (34)

	Char  shift 42
	.  error

	string  goto 66


state 16
	text_element : CODE_PRE . string END_CODE_PRE  (35)

	Char  shift 42
	.  error

	string  goto 67


state 17
	text_element : VERB . string END_VERB  (40)

	Char  shift 42
	.  error

	string  goto 68


state 18
	text_element : LATEX . string END_TARGET  (41)

	Char  shift 42
	.  error

	string  goto 69


state 19
	text_element : Target . string END_TARGET  (42)

	Char  shift 42
	.  error

	string  goto 70


state 20
	text_element : LBRACE . ele_ref_kind string END text END  (37)

	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	.  error

	ele_ref_kind  goto 71


state 21
	ele_ref_kind : ELE_REF .  (9)

	.  reduce 9


state 22
	ele_ref_kind : VAL_REF .  (10)

	.  reduce 10


state 23
	ele_ref_kind : TYP_REF .  (11)

	.  reduce 11


state 24
	ele_ref_kind : EXC_REF .  (12)

	.  reduce 12


state 25
	ele_ref_kind : MOD_REF .  (13)

	.  reduce 13


state 26
	ele_ref_kind : MODT_REF .  (14)

	.  reduce 14


state 27
	ele_ref_kind : CLA_REF .  (15)

	.  reduce 15


state 28
	ele_ref_kind : CLT_REF .  (16)

	.  reduce 16


state 29
	ele_ref_kind : ATT_REF .  (17)

	.  reduce 17


state 30
	ele_ref_kind : MET_REF .  (18)

	.  reduce 18


state 31
	ele_ref_kind : SEC_REF .  (19)

	.  reduce 19


state 32
	ele_ref_kind : RECF_REF .  (20)

	.  reduce 20


state 33
	ele_ref_kind : CONST_REF .  (21)

	.  reduce 21


state 34
	text_element : MOD_LIST_REF . string END  (38)

	Char  shift 42
	.  error

	string  goto 72


state 35
	text_element : INDEX_LIST .  (39)

	.  reduce 39


state 36
	text_element : SUPERSCRIPT . text END  (27)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 73
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 37
	text_element : SUBSCRIPT . text END  (28)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 74
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 38
	text_element : BEGIN_SHORTCUT_LIST_ITEM . shortcut_list END_SHORTCUT_LIST  (45)
	text_element : BEGIN_SHORTCUT_LIST_ITEM . shortcut_list EOF  (46)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 75
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48
	shortcut_list  goto 76


state 39
	text_element : BEGIN_SHORTCUT_ENUM_ITEM . shortcut_enum END_SHORTCUT_LIST  (47)
	text_element : BEGIN_SHORTCUT_ENUM_ITEM . shortcut_enum EOF  (48)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 77
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48
	shortcut_enum  goto 78


state 40
	text_element : BLANK_LINE .  (44)

	.  reduce 44


state 41
	main : EOF .  (2)

	.  reduce 2


42: shift/reduce conflict (shift 42, reduce 62) on Char
state 42
	string : Char .  (62)
	string : Char . string  (63)

	Char  shift 42
	$end  reduce 62
	END  reduce 62
	Title  reduce 62
	BOLD  reduce 62
	EMP  reduce 62
	CENTER  reduce 62
	LEFT  reduce 62
	RIGHT  reduce 62
	ITALIC  reduce 62
	CUSTOM  reduce 62
	LIST  reduce 62
	ENUM  reduce 62
	ITEM  reduce 62
	LINK  reduce 62
	CODE  reduce 62
	END_CODE  reduce 62
	CODE_PRE  reduce 62
	END_CODE_PRE  reduce 62
	VERB  reduce 62
	END_VERB  reduce 62
	LATEX  reduce 62
	Target  reduce 62
	END_TARGET  reduce 62
	LBRACE  reduce 62
	ELE_REF  reduce 62
	VAL_REF  reduce 62
	TYP_REF  reduce 62
	EXC_REF  reduce 62
	MOD_REF  reduce 62
	MODT_REF  reduce 62
	CLA_REF  reduce 62
	CLT_REF  reduce 62
	ATT_REF  reduce 62
	MET_REF  reduce 62
	SEC_REF  reduce 62
	RECF_REF  reduce 62
	CONST_REF  reduce 62
	MOD_LIST_REF  reduce 62
	INDEX_LIST  reduce 62
	SUPERSCRIPT  reduce 62
	SUBSCRIPT  reduce 62
	BEGIN_SHORTCUT_LIST_ITEM  reduce 62
	BEGIN_SHORTCUT_ENUM_ITEM  reduce 62
	SHORTCUT_LIST_ITEM  reduce 62
	SHORTCUT_ENUM_ITEM  reduce 62
	END_SHORTCUT_LIST  reduce 62
	BLANK_LINE  reduce 62
	EOF  reduce 62

	string  goto 79


state 43
	%entry% : '\001' main .  (64)

	.  reduce 64


state 44
	main : text . EOF  (1)

	EOF  shift 80
	.  error


state 45
	text : text_element_list .  (3)

	.  reduce 3


state 46
	text_element_list : text_element .  (4)
	text_element_list : text_element . text_element_list  (5)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	END  reduce 4
	SHORTCUT_LIST_ITEM  reduce 4
	SHORTCUT_ENUM_ITEM  reduce 4
	END_SHORTCUT_LIST  reduce 4
	EOF  reduce 4

	text_element_list  goto 81
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 47
	text_element : ele_ref_kind . string END  (36)

	Char  shift 42
	.  error

	string  goto 82


state 48
	text_element : string .  (49)

	.  reduce 49


state 49
	%entry% : '\002' located_element_list .  (65)

	.  reduce 65


state 50
	located_element : text_element .  (8)

	.  reduce 8


state 51
	located_element_list : located_element .  (6)
	located_element_list : located_element . located_element_list  (7)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	$end  reduce 6

	located_element_list  goto 83
	text_element  goto 50
	located_element  goto 51
	ele_ref_kind  goto 47
	string  goto 48


state 52
	text_element : Title text . END  (22)

	END  shift 84
	.  error


state 53
	text_element : BOLD text . END  (23)

	END  shift 85
	.  error


state 54
	text_element : EMP text . END  (26)

	END  shift 86
	.  error


state 55
	text_element : CENTER text . END  (29)

	END  shift 87
	.  error


state 56
	text_element : LEFT text . END  (30)

	END  shift 88
	.  error


state 57
	text_element : RIGHT text . END  (31)

	END  shift 89
	.  error


state 58
	text_element : ITALIC text . END  (24)

	END  shift 90
	.  error


state 59
	text_element : CUSTOM text . END  (25)

	END  shift 91
	.  error


state 60
	item : ITEM . text END  (55)

	Title  shift 4
	BOLD  shift 5
	EMP  shift 6
	CENTER  shift 7
	LEFT  shift 8
	RIGHT  shift 9
	ITALIC  shift 10
	CUSTOM  shift 11
	LIST  shift 12
	ENUM  shift 13
	LINK  shift 14
	CODE  shift 15
	CODE_PRE  shift 16
	VERB  shift 17
	LATEX  shift 18
	Target  shift 19
	LBRACE  shift 20
	ELE_REF  shift 21
	VAL_REF  shift 22
	TYP_REF  shift 23
	EXC_REF  shift 24
	MOD_REF  shift 25
	MODT_REF  shift 26
	CLA_REF  shift 27
	CLT_REF  shift 28
	ATT_REF  shift 29
	MET_REF  shift 30
	SEC_REF  shift 31
	RECF_REF  shift 32
	CONST_REF  shift 33
	MOD_LIST_REF  shift 34
	INDEX_LIST  shift 35
	SUPERSCRIPT  shift 36
	SUBSCRIPT  shift 37
	BEGIN_SHORTCUT_LIST_ITEM  shift 38
	BEGIN_SHORTCUT_ENUM_ITEM  shift 39
	BLANK_LINE  shift 40
	Char  shift 42
	.  error

	text  goto 92
	text_element_list  goto 45
	text_element  goto 46
	ele_ref_kind  goto 47
	string  goto 48


state 61
	text_element : LIST list . END  (32)
	list : list . string  (52)

	END  shift 93
	Char  shift 42
	.  error

	string  goto 94


62: shift/reduce conflict (shift 42, reduce 50) on Char
state 62
	list : string .  (50)
	list : string . list  (51)

	ITEM  shift 60
	Char  shift 42
	END  reduce 50

	list  goto 95
	string  goto 62
	item  goto 63


63: shift/reduce conflict (shift 42, reduce 53) on Char
state 63
	list : item .  (53)
	list : item . list  (54)

	ITEM  shift 60
	Char  shift 42
	END  reduce 53

	list  goto 96
	string  goto 62
	item  goto 63


state 64
	text_element : ENUM list . END  (33)
	list : list . string  (52)

	END  shift 97
	Char  shift 42
	.  error

	string  goto 94


state 65
	text_element : LINK string . END text END  (43)

	END  shift 98
	.  error


state 66
	text_element : CODE string . END_CODE  (34)

	END_CODE  shift 99
	.  error


state 67
	text_element : CODE_PRE string . END_CODE_PRE  (35)

	END_CODE_PRE  shift 100
	.  error


state 68
	text_element : VERB string . END_VERB  (40)

	END_VERB  shift 101
	.  error


state 69
	text_element : LATEX string . END_TARGET  (41)

	END_TARGET  shift 102
	.  error


state 70
	text_element : Target string . END_TARGET  (42)

	END_TARGET  shift 103
	.  error


state 71
	text_element : LBRACE ele_ref_kind . string END text END  (37)

	Char  shift 42
	.  error

	string  goto 104


state 72
	text_element : MOD_LIST_REF string . END  (38)

	END  shift 105
	.  error


state 73
	text_element : SUPERSCRIPT text . END  (27)

	END  shift 106
	.  error


state 74
	text_element : SUBSCRIPT text . END  (28)

	END  shift 107
	.  error


state 75
	shortcut_list : text . shortcut_list2  (56)
	shortcut_list : text .  (57)

	SHORTCUT_LIST_ITEM  shift 108
	END_SHORTCUT_LIST  reduce 57
	EOF  reduce 57

	shortcut_list2  goto 109


state 76
	text_element : BEGIN_SHORTCUT_LIST_ITEM shortcut_list . END_SHORTCUT_LIST  (45)
	text_element : BEGIN_SHORTCUT_LIST_ITEM shortcut_list . EOF  (46)

	END_SHORTCUT_LIST  shift 110
	EOF  shift 111
	.  error

